# TradingBot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  nixpacks.toml  push.bat  push.py  pyproject.toml  railway.json  requirements.txt  start.bat  system_design.md
.claude/: settings.local.json
src/: __init__.py  config.py  main.py  models.py  state.py
src/analysis/: __init__.py  fvg_detector.py  gamma_calculator.py  sentiment_engine.py
src/data/: __init__.py  price_fetcher.py
src/execution/: __init__.py  order_manager.py  risk_manager.py  signal_generator.py
