[project]
name = "trader"
version = "1.0.0"
description = "Rule-based intraday trading system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "yfinance>=0.2.36",
    "anthropic>=0.18.0",
    "redis>=5.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pytz>=2024.1",
    "httpx>=0.26.0",
]

[project.scripts]
trader = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
